# Solar-1

./: .replit  pyproject.toml  render.yaml
.agents/memory/: MEMORY.md  module3-detector.md  module4-lead-time.md  solexs-pipeline.md
api/: main.py  requirements.txt  solexs_model.py
attached_assets/: Pasted--No-open-ports-detected-continuing-to-scan-Docs-on-spec_1781632727420.txt  Pasted-Forecasting-and-or-Nowcasting-of-Solar-Flares-using-com_1781462750789.txt  Pasted-Let-s-try-a-different-approach-Instead-of-hunting-for-a_1781628634741.txt  Pasted-Show-more-16-27-Great-analysis-Let-me-give-you-the-exac_1781607517094.txt  Pasted-Show-more-22-37-Yes-do-the-isotonic-calibration-path-fi_1781629718869.txt  Pasted-What-Module-3-actually-does-It-answers-one-question-is-_1781552439013.txt  Pasted-What-Module-4-does-in-plain-language-Module-3-detects-a_1781599838173.txt  Pasted-What-you-actually-achieved-You-rescued-an-X-class-detec_1781555401176.txt  Pasted-What-you-need-to-do-right-now-in-order-Run-on-real-data_1781627284361.txt  Pasted-While-you-do-that-here-s-exactly-what-happens-next-so-y_1781551458294.txt
pipeline/: __init__.py  requirements.txt
pipeline/checkpoints/: best_model.pt  isotonic_calibrator.pkl  metrics.json  scaler.pkl
pipeline/module1/: __init__.py  align.py  channels.py  formats.py  gaps.py  ingest.py  quality.py
pipeline/module2/: __init__.py  background.py  detrend.py  features.py  preprocess.py  split.py  windows.py
pipeline/module3/: __init__.py  catalogue.py  detector.py  evaluate.py  goes.py  goes_crossmatch.py  threshold.py
(+18 files in other folders)
