[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "astropy>=7.2.0",
    "h5netcdf>=1.8.1",
    "h5py>=3.16.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "requests>=2.34.2",
    "scipy>=1.17.1",
    "xarray>=2026.4.0",
]
